# Elysium

./: .gitignore  .gitmodules  CMakeLists.txt  Elysium.sln  Elysium.sln.licenseheader  LICENSE.txt  Makefile  README.md
CMake/: LICENSE
Elysium/: CMakeLists.txt  Elysium.vcxproj  Elysium.vcxproj.filters
Elysium/src/: CMakeLists.txt  Elysium.h  elypch.h
Elysium/src/Elysium/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Log.cpp  Log.h  Window.h
Elysium/src/Elysium/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  KeyCodeTranslation.hpp  KeyCodes.h  Log.cpp  Log.h  Timestep.h  Window.h
Elysium/src/Elysium/Debug/: Instrumentor.h
Elysium/src/Elysium/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Elysium/src/Elysium/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Elysium/src/Elysium/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Elysium/src/Elysium/Math/: AABB.hpp  Constants.h  Easing.hpp  Frustum.hpp  Functions.hpp  Interpolation.hpp  Mat3.inl  Mat4.inl  Math.hpp  Matrix.hpp  Plane.hpp  Projection.hpp  Quaternion.hpp  RayCasting.hpp  Transform2d.hpp  Transform3d.hpp  Triangulate.hpp  Vec.hpp  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp  Vec4.inl  type_ptr.hpp  type_ptr.inl
Elysium/src/Elysium/Math/SIMD/: Common.h  Conversion.h  Exponential.h  Geometric.h  Integer.h  Logarithmic.h  Matrix.h  Neon.h  Platform.h  SIMDPlatform.h  Trigonometric.h
Elysium/src/Elysium/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Elysium/src/Platform/Linux/: WaylandWindow.cpp
Elysium/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRender.cpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Elysium/src/Platform/Windows/: Win32_Input.cpp  Win32_Input.h  Win32_Window.cpp  Win32_Window.h  WindowsWindow.cpp  WindowsWindow.h
ElysiumEditor/: App.xaml  App.xaml.cs  ElysiumEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
ElysiumEditor/Common/: RelayCommand.cs  ViewModelBase.cs
ElysiumEditor/Components/: Component.cs  GameEntity.cs  Transform.cs
ElysiumEditor/Dictionaries/: ControlTemplates.xaml  ControlTemplates.xaml.cs
ElysiumEditor/Editors/WorldEditor/: GameEntityView.xaml  GameEntityView.xaml.cs  ProjectLayoutView.xaml  ProjectLayoutView.xaml.cs  WorldEditorView.xaml  WorldEditorView.xaml.cs
ElysiumEditor/GameProject/: NewProject.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProject.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  Project.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  Scene.cs
ElysiumEditor/ProjectTemplates/EmptyProject/: project.elys  template.xml
ElysiumEditor/ProjectTemplates/FirstPersonProject/: template.xml
ElysiumEditor/ProjectTemplates/ThirdPersonProject/: project.elys  template.xml
ElysiumEditor/ProjectTemplates/TopDownProject/: template.xml
ElysiumEditor/Utils/: Logger.cs  LoggerView.xaml  LoggerView.xaml.cs  Serializer.cs  UndoRedo.cs  UndoRedoView.xaml  UndoRedoView.xaml.cs  Utilities.cs
ElysiumEditor/dllWrapper/: EngineAPI.cs
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/Common/: CommonHeaders.h  Id.h
Engine/Components/: ComponentsCommon.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h
Engine/EngineAPI/: GameEntity.h  TransformComponent.h
Engine/Utils/: MathTypes.h  Utils.h
EngineDLL/: EngineAPI.cpp  EngineDLL.vcxproj  dllmain.cpp
EngineTest/: EngineTest.vcxproj  Main.cpp  Test.h  TestEntityComponents.h
Framework/: Framework.vcxproj
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
bin_int/Debug_x64/EOFW/EOFW.tlog/: EOFW.lastbuildstate
bin_int/Debug_x64/Elysium/: vc143.idb
bin_int/Debug_x64/Elysium/Elysium.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
bin_int/Debug_x64/Sandbox/: vc143.idb
cmake/: LICENSE
